[package]
name = "rgpui-yororen-ui"
version = "0.1.0"
edition = "2024"
publish = true
description = "Yororen UI 组件库"
license = "Apache-2.0"
repository = "https://github.com/launcher-rs/rgpui-yororen-ui.git"

[dependencies]
rgpui = "0.1"

rust-embed = "8.9.0"
smallvec = "1.15"
stacksafe = "1"
unicode-segmentation = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[lints.rust]
unexpected_cfgs = { level = "allow" }

[lints.clippy]
dbg_macro = "deny"
todo = "deny"

declare_interior_mutable_const = "deny"

redundant_clone = "deny"
disallowed_methods = "deny"

style = { level = "allow", priority = -1 }

type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"
