[workspace]
resolver = "3"
members = [
    "crates/rgpui-yororen-ui",
    "examples/counter",
    "examples/file_browser",
    "examples/todolist",
    "examples/toast_notification",
]

[workspace.dependencies]
rgpui = ">=0.1, <1.0"
rgpui-platform = ">=0.1, <1.0"
rgpui-yororen-ui = {path = "crates/rgpui-yororen-ui",version = "0.1.1"}



[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"

declare_interior_mutable_const = "deny"

redundant_clone = "deny"
disallowed_methods = "deny"

style = { level = "allow", priority = -1 }

type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"
